--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "dotenv": "^17.2.3",
-    "k6-html-reporter": "^1.0.5"
+    "dotenv": "^17.2.3"
   }
 }
